filter by locales with pagination and select2

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,8 @@
  *= require css3-mixins
  *= require dropzone/basic
  *= require selectize.bootstrap3
+ *= require select2
+ *= require select2-overrides
  *
  *= require_self
  *= require_tree ./pages
