--- a/app/assets/stylesheets/pages/search.css.scss
+++ b/app/assets/stylesheets/pages/search.css.scss
@@ -1,5 +1,6 @@
 @import "base/vars";
 @import "css3-mixins";
+@import "partials/_pagination";
 
 body.search {
   .filter-bar {
@@ -40,25 +41,3 @@ body.search {
   }
   table a { text-decoration: underline; }
 }
-
-.pagination-links {
-  width: 100%;
-  font-size: 20px;
-  margin: 10px 0px;
-  .pagination {
-    display: flex;
-  }
-  .switch-page {
-    width: 198px;
-    flex-grow: 1;
-    &.left { text-align: left; }
-    &.right { text-align: right; }
-  }
-  .pages {
-    @include flex;
-    text-align: center;
-    .page + .page { margin-left: 8px; }
-  }
-}
-
-.pagination-info { width: 100%; text-align: center; }
