fixed go to locale and search query with searchable_source_copy instead of copy

--- a/app/views/locale/projects/show.js.coffee.erb
+++ b/app/views/locale/projects/show.js.coffee.erb
@@ -64,7 +64,7 @@ $(document).ready ->
   # TRANSLATION WORKBENCH
   new TranslationWorkbench(
     $(".translation-workbench"),
-    "<%= search_translations_url %>",
+    "<%= search_translations_url(:target_locales => @locale.rfc5646) %>",
     JSON.parse("<%= escape_javascript @glossary_entries.to_json %>"),
     JSON.parse('<%= escape_javascript @presenter.decorate_translations(@translations) %>')
   )
