--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -104,7 +104,7 @@
             .controls.checkboxes_and_radios
               = label_tag "project_use_imports_#{index}", class: 'checkbox'
                 = importer.human_name
-              = check_box_tag "project[use_imports][]", importer.ident, !@project.skip_imports.include?(importer.ident), id: "project_use_imports_#{index}"
+              = check_box_tag "project[use_imports][]", importer.ident, !@project.persisted? ? false : !@project.skip_imports.include?(importer.ident), id: "project_use_imports_#{index}"
           / p.help-block
           / | A comma-delimited list of locales to target. Include
           / - if PseudoTranslator.supported_rfc5646_locales.count > 1
