Enable empty strings to be supported by Shuttle
When a translator puts in an empty string i.e. "   ", it will now be
valid and show up as (3 whitespace string).  We only require the
is_blank checkbox to be checked if its a completely empty string, i.e.
"".

--- a/app/views/search/keys.js.coffee.erb
+++ b/app/views/search/keys.js.coffee.erb
@@ -49,8 +49,10 @@ $(window).ready ->
 
           copy = if translation.translated == false
             "(not yet translated)"
+          else if translation.copy.length == 0
+            "(empty string)"
           else if /\A\s*\z/.test(translation.copy)
-            "(blank string)"
+            "(#{translation.copy.length} whitespace string)"
           else
             translation.copy[0..30]
 
