Add hidden_in_search field to key to mark if we should hide corresponding translations in search Add filter in search allowing search for hidden keys

--- a/app/assets/stylesheets/pages/translations.scss
+++ b/app/assets/stylesheets/pages/translations.scss
@@ -146,6 +146,11 @@ body.translations {
     }
   }
 
+  .hide-btn, .show-btn {
+    width: 100px;
+    margin-left: 10px;
+  }
+
   .form-actions { 
     input+input, button+button, button+input, input + button {
       margin: 0px;
