Add hidden_in_search field to key to mark if we should hide corresponding translations in search Add filter in search allowing search for hidden keys

--- a/app/assets/stylesheets/pages/search.css.scss
+++ b/app/assets/stylesheets/pages/search.css.scss
@@ -10,6 +10,11 @@ body.search {
       input[type="text"] { width: 865px; }
       select {width: 150px; }
     }
+
+    #hidden_keys {
+      margin-top: 10px;
+      margin-left: 0px;
+    }
   }
 
   &#search-translations {
