--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -49,4 +49,7 @@ html lang="en"
       = raw(ERB.new(File.read(js_erb_file)).result(binding)) if File.exist?(js_erb_file)
       = raw(CoffeeScript.compile(ERB.new(File.read(js_coffee_erb_file)).result(binding))) if File.exist?(js_coffee_erb_file)
 
+    - if ENV['SENTRY_PUBLIC_DSN']
+      script type='text/javascript' Raven.config("#{ENV['SENTRY_PUBLIC_DSN']}").install()
+
     = render partial: 'layouts/flashes'
