Add a display for the project ID in the project settings page

--- a/app/views/projects/_form.slim
+++ b/app/views/projects/_form.slim
@@ -262,9 +262,13 @@
       .row
         .eight.columns
           fieldset
-            legend Article API Token
+            legend Article API
 
             .space-group
+              strong Project Id: #{@project.id}
+
+            .space-group
+              strong API Token:
               .controls
                 code
                   = @project.api_token
